Layout update: -Misc layout changes for spacing, size, etc. (modified div classes, cleaned up CSS) -CDUID text moved, no longer replaces page summary text on map update -Map given border, background colour, and new cursor to look more like an interactive element -Census divisions now highlight when selection -Census division outlines thinned and less fractured/pointy on zoom -Deeper zoom for smaller census divisions

--- a/css_files/map_css.css
+++ b/css_files/map_css.css
@@ -1,21 +1,27 @@
-#container {
-    /*display: flex; !* or inline-flex *!*/
-    /*flex-direction: column;*/
-}
-
-/*#det_adv_stats_div{*/
-    /*display: flex;*/
-    /*flex-direction: row;*/
-    /*justify-content:space-around ;*/
-/*}*/
 #map_svg{
     margin: 5px;
-    border: 1px solid #777777;
-    box-shadow: 0 0 5px #ff0000;
+    border: 1px solid #888888;
+    box-shadow: 0 0 5px #888888;
+    cursor: pointer;
 }
-
+#map_div, #commute_div{
+    margin: 5px;
+    width: 100%;
+}
+#lmi_pop_div, #adv_det_div{
+    width: 100%;
+    margin-top: 5px;
+    border-top: 1px solid #cccccc;
+}
+#pie_div{
+    margin-left: 5%;
+}
+#comm_tbl_div{
+    margin: auto;
+    width: 50%;
+}
 .float{
-    display: inline-flex; /* or inline-flex */
+    display: inline-flex;
     flex-direction: row;
     justify-content: space-evenly;
 }
@@ -28,36 +34,3 @@
 .arc path {
     stroke: #fff;
 }
-
-
-
-/*.tbl  {*/
-    /*!*width: 100%;*!*/
-/*}*/
-/*path.active {*/
-/*fill: #ccc;*/
-/*cursor: pointer;*/
-/*}*/
-
-/*.tbl td:nth-child(2) {*/
-    /*width: 40%;*/
-/*}*/
-/*.tbl td:nth-child(2),*/
-/*.tbl td:nth-child(3),*/
-/*.tbl td:nth-child(4) {*/
-    /*!*width: 20%;*!*/
-    /*text-align:center*/
-/*}*/
-/*.tbl th:nth-child(2),*/
-/*.tbl th:nth-child(3),*/
-/*.tbl th:nth-child(4) {*/
-    /*text-align:center*/
-/*}*/
-
-/*.active {*/
-    /*fill: orange;*/
-/*}*/
-
-/*.fields {*/
-    /*text-align: center;*/
-/*}*/
